--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "react-directive",
+  "name": "react-with-directive",
   "version": "1.0.0",
   "description": "react use directive",
-  "main": "src/index.js",
-  "module": "src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c rollup.config.js"
   },
   "author": {
     "name": "leegsen",
@@ -24,5 +25,11 @@
   "peerDependencies": {
     "react": ">=16.2.0",
     "react-dom": ">=16.2.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.9.6",
+    "rollup": "^2.10.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   }
 }
